--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         go-version: '1.15.4'
     - name: lint
-      run: make lint
+      uses: golangci/golangci-lint-action@v2
     - name: vet
       run: make vet
     - name: test
