--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
-      uses: actions/checkout@v2
-    - uses: actions/setup-go@v2
+      uses: actions/checkout@v5
+    - uses: actions/setup-go@v6
       with:
-        go-version: '1.15.4'
+        go-version-file: 'go.mod'
     - name: lint
-      uses: golangci/golangci-lint-action@v2
+      uses: golangci/golangci-lint-action@v9
     - name: vet
       run: make vet
     - name: test
